# EIHR-PROT

./: .gitignore  README.md  distance_calc.py  embedding_extraction_requirements.txt  extract_embeddings.py  extract_from_cif.ipynb  hashlist.txt  load_pdbfiles.ipynb  parser.py  preprocessing.py  pyproject.toml  requirements.txt  retained_xray_ids_pdb_train.txt  retained_xray_ids_pdb_val.txt  run_preprocessing.py  structure_processing.py  utils.py
config/: averaging_baseline_hparams.yaml  internal_gate_baseline_hparams.yaml  paths.yaml  reliability_aware_model_hparams.yaml  seq_only_hparams.yaml  seq_structure_hparams.yaml  structure_only_hparams.yaml
configs/: README.md  homology_only.yaml  sequence_homology_confidence_gate.yaml  sequence_homology_fixed.yaml  sequence_homology_internal_gate.yaml  sequence_only.yaml
data/: retained_xray_ids_pdb_test.txt
data/HEAL_dataset/: nrAF-Model-GO_test_sequences.fasta  nrAF-Model-GO_val_sequences.fasta  nrPDB-GO_2019.06.18_test_sequences.fasta  nrPDB-GO_2019.06.18_val_sequences.fasta
data/cleaned_dataset/: cleaned_af_test.fasta  cleaned_pdb_test.fasta  cleaned_pdb_val.fasta
diamond/: go_vocab.json  subject_go_index.json  val_hits.tsv  val_queries.fasta
diamond/train_homology_shards/: homology_shard_0019.pt  homology_shard_metadata.json
diamond/val_homology_shards/: homology_shard_0002.pt  homology_shard_metadata.json
esm_manifests/: pdb_test_manifest.csv  pdb_train_manifest.csv  pdb_val_manifest.csv
models/: averaging_baseline_ablation.py  diamond_score_baseline.py  homology_only_baseline.py  internal_gate_baseline_ablation.py  naive_baseline.py  reliability_aware_model.py  seq_structure_ablation.py  sequence_homology_ablation.py  sequence_homology_common.py  sequence_only_ablation.py  structure_only_ablation.py
reliability_aware/utils/: cafa_metrics.py  config.py  diamond_executable.py  diamond_homology.py  extract_esm_embeddings.py  generic_loader.py  go_term_extraction.py  inference_reporting.py  inference_runtime.py  inference_utils.py  losses.py  model_training.py  (+5 more)
scripts/: build_homology_shards.py  create_graph_object.py  get_embeddings.py  get_go_terms.py  merge_go_annotations.py  model.py  prepare_diamond_hits.py  run_all_similarity_bin_inference.py  run_inference.py  run_model_training.py  run_preprocessing.py  run_randomized_search.py
tests/: test_build_homology_shards_cli.py  test_cafa_metrics.py  test_cafa_only_contract.py  test_inference_layout.py  test_prediction_mode.py
utils/: config.py  diamond_homology.py  extract_esm_embeddings.py  generic_loader.py  go_term_extraction.py  model_randomized_search.py  model_training.py  parser.py  preprocessing.py  shard_handling.py
xray_filtered_pdb/: filtered_pdb_val.fasta  filtered_test.fasta  filtered_val.fasta
(+31 files in other folders)
