[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reliability-aware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "biopython>=1.87",
    "fair-esm>=2.0.0",
    "gemmi>=0.7.5",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "torch==2.11.0",
    "torch-geometric>=2.7.0",
    "torch-cluster",
    "tqdm>=4.67.3",
    "goatools>=1.6.4",
]

[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torch-cluster = { index = "pyg-cu128-211" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pyg-cu128-211"
url = "https://data.pyg.org/whl/torch-2.11.0+cu128.html"
format = "flat"
explicit = true
