[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reliability-aware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "biopython>=1.87",
    "fair-esm>=2.0.0",
    "gemmi>=0.7.5",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
    "goatools>=1.6.4",
    "scikit-learn>=1.8.0",
    "pyyaml>=6.0.3",
    "wandb>=0.27.0",
]

[project.optional-dependencies]
cpu = ["torch==2.11.0"]
cu128 = ["torch==2.11.0"]

[tool.hatch.build.targets.wheel]
packages = ["reliability_aware"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
